CI/check: use the runner temp dir instead of harcoding paths
* The most space is on D: nowadays, so just use runner.temp that's
  located there and also is cleaned up afterwards
* Instead of hardcoding paths, pass the directory to the script

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -127,11 +127,11 @@ jobs:
         continue-on-error: true
         with:
           name: UCRT64-packages
-          path: C:/_/artifacts
+          path: ${{ runner.temp }}/artifacts
       - name: Check whether to Run
         id: check-run
         run: |
-          python .ci/ci-check.py --whether-to-run
+          python .ci/ci-check.py --whether-to-run "${{ runner.temp }}/artifacts"
       - uses: msys2/setup-msys2@v2
         if: steps.check-run.outputs.run == 'true'
         with:
@@ -153,7 +153,7 @@ jobs:
         if: steps.check-run.outputs.run == 'true'
         shell: msys2 {0}
         run: |
-          python .ci/ci-check.py
+          python .ci/ci-check.py "${{ runner.temp }}/artifacts"
 
   package-grokker:
     runs-on: ubuntu-latest
