CI: move various things from drive C to D to get more space/speed
Previously C had more space compared to D, see
https://github.com/msys2/MINGW-packages/issues/9048#issuecomment-820889210

Nowadays it's the opposite:
    Name           Used (GB)     Free (GB) Provider      Root                                               CurrentLocation
    ----           ---------     --------- --------      ----                                               ---------------
    A                                      FileSystem    A:\
    C                 119.26         30.25 FileSystem    C:\
    D                   3.00        147.00 FileSystem    D:\                                 …ys2-autobuild\msys2-autobuild
    Temp              119.26         30.25 FileSystem    C:\Users\runneradmin\AppData\Local…

    Name : AMD EPYC 7763 64-Core Processor

So:

* Move the pagefile to D:
* Move the MSYS2 install from C:/M to D:/M
* Move the checkout from C:/_ to D:/_
* (Make it configurable for self-hosted runners)

Ideally that gives us more space for builds, and according to this
it should also be faster: https://github.com/pypa/pip/pull/13129

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,11 +15,11 @@ jobs:
       fail-fast: false
       matrix:
         include: [
-          { msystem: UCRT64, runner: windows-2025 },
-          { msystem: CLANG64, runner: windows-2025 },
-          { msystem: MINGW64, runner: windows-2025 },
-          { msystem: MINGW32, runner: windows-2025 },
-          # { msystem: CLANGARM64, runner: ['Windows', 'ARM64', 'CI'] }
+          { msystem: UCRT64, runner: windows-2025, drive: 'D' },
+          { msystem: CLANG64, runner: windows-2025, drive: 'D' },
+          { msystem: MINGW64, runner: windows-2025, drive: 'D' },
+          { msystem: MINGW32, runner: windows-2025, drive: 'D' },
+          # { msystem: CLANGARM64, runner: ['Windows', 'ARM64', 'CI'], drive: 'C' }
         ]
     name: ${{ matrix.msystem }}
     runs-on: ${{ matrix.runner }}
@@ -46,7 +46,7 @@ jobs:
         with:
           minimum-size: 4GB
           maximum-size: 16GB
-          disk-root: "C:"
+          disk-root: "${{ matrix.drive }}:"
 
       - uses: actions/checkout@v4
         with:
@@ -67,7 +67,7 @@ jobs:
           install: git python base-devel
           update: true
           release: ${{ runner.arch != 'ARM64' }}
-          location: 'D:\M'
+          location: '${{ matrix.drive }}:\M'
 
       - name: Add staging repo
         shell: msys2 {0}
@@ -82,14 +82,15 @@ jobs:
 
       - name: Move Checkout
         run: |
-          If (Test-Path "C:\_") { rm -r -fo "C:\_" }
-          Copy-Item -Path ".\temp" -Destination "C:\_" -Recurse
+          $path = "${{ matrix.drive }}:\_"
+          If (Test-Path "$path") { rm -r -fo "$path" }
+          Move-Item -Path ".\temp" -Destination "$path"
 
       - name: CI-Build
         shell: msys2 {0}
         id: build
         run: |
-          cd /C/_
+          cd "/${{ matrix.drive }}/_"
           unset VCPKG_ROOT
           MINGW_ARCH=${{ matrix.msystem }} ./.ci/ci-build.sh
 
@@ -98,7 +99,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.msystem }}-packages
-          path: C:/_/artifacts/*.pkg.tar.*
+          path: ${{ matrix.drive }}:/_/artifacts/*.pkg.tar.*
           if-no-files-found: ignore
 
       - name: "Upload dumps"
@@ -113,7 +114,7 @@ jobs:
         if: ${{ always() }}
         continue-on-error: true
         run: |
-          If (Test-Path "C:\_") { rm -r -fo "C:\_" }
+          If (Test-Path "${{ matrix.drive }}:\_") { rm -r -fo "${{ matrix.drive }}:\_" }
           msys2 -c 'mv -f /etc/pacman.conf.bak /etc/pacman.conf'
           msys2 -c 'pacman --noconfirm -Suuy'
           msys2 -c 'pacman --noconfirm -Suu'
