CI: revert to C: for al-cheb/configure-pagefile-action
It fails otherwise for some reason, see
https://github.com/al-cheb/configure-pagefile-action/issues/18

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,8 @@ jobs:
         with:
           minimum-size: 4GB
           maximum-size: 16GB
-          disk-root: "${{ matrix.drive }}:"
+          # https://github.com/al-cheb/configure-pagefile-action/issues/18
+          disk-root: "C:"
 
       - uses: actions/checkout@v4
         with:
