--- a/mingw-w64-mesa/PKGBUILD
+++ b/mingw-w64-mesa/PKGBUILD
@@ -4,7 +4,7 @@ _realname=mesa
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=25.0.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Open-source implementation of the OpenGL, Vulkan and OpenCL specifications (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -109,8 +109,13 @@ build() {
   -Dmicrosoft-clc=enabled
   -Dspirv-to-dxil=true
   -Dstatic-libclc=all
-  -Dvulkan-drivers=microsoft-experimental,swrast,gfxstream
   )
+
+  if [[ ${CARCH} == x86_64 ]]; then
+    _meson_options+=(-Dvulkan-drivers=microsoft-experimental,swrast,gfxstream)
+  else
+    _meson_options+=(-Dvulkan-drivers=microsoft-experimental,swrast)
+  fi
 
   MSYS2_ARG_CONV_EXCL="--prefix=" \
   PROCESSOR_ARCHITECTURE="${CARCH}" \
