llama.cpp: update to b4835

--- a/mingw-w64-llama.cpp/PKGBUILD
+++ b/mingw-w64-llama.cpp/PKGBUILD
@@ -4,7 +4,7 @@ _realname=llama.cpp
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 epoch=1
-pkgver=b4458
+pkgver=b4835
 pkgrel=1
 pkgdesc="Library and tools for running inference with Meta's LLaMA model (and derivatives) in C/C++ (mingw-w64)"
 arch=('any')
@@ -30,7 +30,7 @@ makedepends=(
   "${MINGW_PACKAGE_PREFIX}-vulkan-headers"
 )
 source=("https://github.com/ggerganov/llama.cpp/archive/${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('62e698f1a34e851d448db0d85123bf6f1c3f6eec5a25e29ddc8a4a71aeda5230')
+sha256sums=('00b931927227ad64f8da1bc2d7013d25ca0626becaec338f0c3cf85b08b0e45f')
 
 build() {
   mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
@@ -60,6 +60,7 @@ build() {
       -DGGML_OPENCL_USE_ADRENO_KERNELS=OFF \
       -DGGML_NATIVE=OFF \
       -DGGML_CCACHE=OFF \
+      -DGGML_BUILD_NUMBER="${pkgver/b/}" \
       -DPython3_EXECUTABLE=${MINGW_PREFIX}/bin/python \
       ../${_realname}-${pkgver}
 
