mingw-w64: Update to b025331084

--- a/mingw-w64-winpthreads-git/PKGBUILD
+++ b/mingw-w64-winpthreads-git/PKGBUILD
@@ -5,9 +5,9 @@
 _realname=winpthreads
 pkgbase=mingw-w64-${_realname}-git
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}-git" "${MINGW_PACKAGE_PREFIX}-libwinpthread-git")
-pkgver=12.0.0.r535.g343bce7b0
+pkgver=12.0.0.r566.gb02533108
 pkgrel=1
-_commit='343bce7b0224bbc576ba70fd5dc8e156a5ac45a3'
+_commit='b025331084febc41e108698bf3ac6c39c6ccfba2'
 pkgdesc="MinGW-w64 winpthreads library (mingw-w64)"
 url="https://www.mingw-w64.org/"
 msys2_repository_url="https://sourceforge.net/p/mingw-w64/mingw-w64/ci/master/tree/mingw-w64-libraries/winpthreads"
@@ -27,7 +27,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
 options=('!emptydirs')
 source=("mingw-w64"::"git+https://git.code.sf.net/p/mingw-w64/mingw-w64#commit=$_commit"
         "0001-Define-__-de-register_frame_info-in-fake-libgcc_s.patch")
-sha256sums=('e714eb92bc115f06b4dfcd43cad28cc964a2f92b76179d7fe0cc54d1c511a5b8'
+sha256sums=('fbb2b28c69b2109401f4d4d6667c4e1b3ec7e26538fdec8a176d40bb6a5dbc57'
             '2e779bcc60a1422b23e0cfdb5c0f6851f2382592bb4675d08a6bdef78d5e5c10')
 
 pkgver() {
