--- a/mingw-w64-headers-git/PKGBUILD
+++ b/mingw-w64-headers-git/PKGBUILD
@@ -4,9 +4,9 @@ _realname=headers
 pkgbase=mingw-w64-${_realname}-git
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}-git"
 pkgdesc="MinGW-w64 headers for Windows (mingw-w64)"
-pkgver=12.0.0.r535.g343bce7b0
+pkgver=12.0.0.r566.gb02533108
 pkgrel=1
-_commit='343bce7b0224bbc576ba70fd5dc8e156a5ac45a3'
+_commit='b025331084febc41e108698bf3ac6c39c6ccfba2'
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.mingw-w64.org/"
@@ -21,7 +21,7 @@ conflicts=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 options=('!strip' '!emptydirs')
 source=("mingw-w64"::"git+https://git.code.sf.net/p/mingw-w64/mingw-w64#commit=$_commit"
         0001-remove-ireference-boolean.patch)
-sha256sums=('e714eb92bc115f06b4dfcd43cad28cc964a2f92b76179d7fe0cc54d1c511a5b8'
+sha256sums=('fbb2b28c69b2109401f4d4d6667c4e1b3ec7e26538fdec8a176d40bb6a5dbc57'
             'cad48616325b5e70afa4e02424021fc8d54e17dcbf86eae3df990d3500080236')
 
 pkgver() {
