--- a/mingw-w64-fgsl/PKGBUILD
+++ b/mingw-w64-fgsl/PKGBUILD
@@ -8,7 +8,7 @@ pkgrel=2
 gsl_required=2.7
 pkgdesc="Fortran interface to the GNU scientific library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64')
 url="https://github.com/reinh-bader/fgsl"
 msys2_references=(
   'aur: fgsl-git'
