hdf5: disable Fortran support with LLVM Flang

--- a/mingw-w64-hdf5/PKGBUILD
+++ b/mingw-w64-hdf5/PKGBUILD
@@ -7,7 +7,7 @@ pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 _ver=1.14.6
 __patch=
 pkgver=${_ver}${_patch//-/.}
-pkgrel=1
+pkgrel=2
 pkgdesc="General purpose library and file format for storing scientific data (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64' 'mingw32')
@@ -77,7 +77,7 @@ build() {
     _extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
   fi
 
-  if [[ ${CARCH} == aarch64 ]]; then
+  if [[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]]; then
     _extra_config+=("-DHDF5_BUILD_FORTRAN=OFF")
   else
     _extra_config+=("-DHDF5_BUILD_FORTRAN=ON")
