--- a/mingw-w64-hdf5/PKGBUILD
+++ b/mingw-w64-hdf5/PKGBUILD
@@ -36,6 +36,7 @@ source=("https://support.hdfgroup.org/releases/hdf5/v${_filever%_*}/v${_filever}
         "hdf5-fix-fortran-module-directory-leak.patch"
         "0001-hdf5-pkgconfig-use-requires-private.patch"
         "0002-dynamic-allocation-functions.patch"
+        "0003-define-__STDC_WANT_IEC_60559_TYPES_EXT__-early.patch"
         "0005-fix-extracted-library-names.patch")
 sha256sums=('e4defbac30f50d64e1556374aa49e574417c9e72c6b1de7a4ff88c4b1bea6e9b'
             'e236f5805152b25065c206922d7ec1bab05b233adac51bbd0fb1e546326162f6'
@@ -43,6 +44,7 @@ sha256sums=('e4defbac30f50d64e1556374aa49e574417c9e72c6b1de7a4ff88c4b1bea6e9b'
             '02b5d7335a9db628ed03b29c62d8f0e5f5618fa39de8e453aa02b530d28317a8'
             '101b6b41bd2e3fad9be2b3a72d5a9235fa90d4a900879b687e26521ee1a2fd8c'
             '4119aebc5d8afab3594c58821a104f252fb8c1bcc5bc12292deb53ac48778577'
+            '6f9305be4aa849e90e66471100b0480855dc5ac91c4468100ede60127206ad60'
             '45b5611af144cae97bc5270e0c3353de8ede542fb0891eb9071431e549aab2e9')
 
 # Helper macros to help make tasks easier #
@@ -64,6 +66,7 @@ prepare() {
     hdf5-fix-fortran-module-directory-leak.patch \
     0001-hdf5-pkgconfig-use-requires-private.patch \
     0002-dynamic-allocation-functions.patch \
+    0003-define-__STDC_WANT_IEC_60559_TYPES_EXT__-early.patch \
     0005-fix-extracted-library-names.patch
 }
 
