remove optdepends for docs

--- a/mingw-w64-zed/PKGBUILD
+++ b/mingw-w64-zed/PKGBUILD
@@ -135,6 +135,7 @@ package_zed() {
 package_zed-docs() {
   pkgdesc+=" (Documentation)"
   depends=()
+  optdepends=()
 
   install -d "${pkgdir}${MINGW_PREFIX}/share/doc/${_realname}/html/"
   cp -r -t "${pkgdir}${MINGW_PREFIX}/share/doc/${_realname}/html/" "${_realname}"/docs/book/*
