python-faker: update to 36.2.2

--- a/mingw-w64-python-faker/PKGBUILD
+++ b/mingw-w64-python-faker/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=faker
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=35.0.0
+pkgver=36.2.2
 pkgrel=1
 pkgdesc="Faker generates fake data for you (mingw-w64)"
 arch=('any')
@@ -16,8 +16,7 @@ url="https://faker.readthedocs.io/"
 msys2_repository_url="https://github.com/joke2k/faker"
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
-         "${MINGW_PACKAGE_PREFIX}-python-dateutil"
-         "${MINGW_PACKAGE_PREFIX}-python-typing_extensions")
+         "${MINGW_PACKAGE_PREFIX}-python-tzdata")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
@@ -26,7 +25,7 @@ checkdepends=("${MINGW_PACKAGE_PREFIX}-python-ukpostcodeparser"
               "${MINGW_PACKAGE_PREFIX}-python-email-validator")
 options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('42f2da8cf561e38c72b25e9891168b1e25fec42b6b0b5b0b6cd6041da54af885')
+sha256sums=('758bc63a26dc878fa0d76aa7639b8b65327927980ed0c3683b23bd8a5182f33f')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
