CI: derive the build drive from GITHUB_WORKSPACE

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,18 +15,22 @@ jobs:
       fail-fast: false
       matrix:
         include: [
-          { msystem: UCRT64, runner: windows-2025, drive: 'D' },
-          { msystem: CLANG64, runner: windows-2025, drive: 'D' },
-          { msystem: MINGW64, runner: windows-2025, drive: 'D' },
-          { msystem: MINGW32, runner: windows-2025, drive: 'D' },
-          # { msystem: CLANGARM64, runner: ['Windows', 'ARM64', 'CI'], drive: 'C' }
+          { msystem: UCRT64, runner: windows-2025},
+          { msystem: CLANG64, runner: windows-2025},
+          { msystem: MINGW64, runner: windows-2025},
+          { msystem: MINGW32, runner: windows-2025},
+          # { msystem: CLANGARM64, runner: ['Windows', 'ARM64', 'CI']}
         ]
     name: ${{ matrix.msystem }}
     runs-on: ${{ matrix.runner }}
     steps:
-      - name: Get CPU Name
+      - name: Gather Facts
+        id: facts
         run : |
+          Get-PSDrive -PSProvider FileSystem | Format-Table -AutoSize -Wrap
           Get-CIMInstance -Class Win32_Processor | Select-Object -Property Name
+          $BUILD_DRIVE = Split-Path $env:GITHUB_WORKSPACE -Qualifier
+          echo "drive=$BUILD_DRIVE" >> $env:GITHUB_OUTPUT
 
       - name: Setup JIT minidump
         if: ${{ matrix.msystem != 'CLANGARM64' }}
@@ -46,7 +50,7 @@ jobs:
         with:
           minimum-size: 4GB
           maximum-size: 16GB
-          # https://github.com/al-cheb/configure-pagefile-action/issues/18
+          # Needs to be C:, see https://github.com/al-cheb/configure-pagefile-action/issues/18
           disk-root: "C:"
 
       - uses: actions/checkout@v4
@@ -68,7 +72,7 @@ jobs:
           install: git python base-devel
           update: true
           release: ${{ runner.arch != 'ARM64' }}
-          location: '${{ matrix.drive }}:\M'
+          location: '${{ steps.facts.outputs.drive }}\M'
 
       - name: Add staging repo
         shell: msys2 {0}
@@ -83,7 +87,7 @@ jobs:
 
       - name: Move Checkout
         run: |
-          $path = "${{ matrix.drive }}:\_"
+          $path = "${{ steps.facts.outputs.drive }}\_"
           If (Test-Path "$path") { rm -r -fo "$path" }
           Move-Item -Path ".\temp" -Destination "$path"
 
@@ -91,7 +95,7 @@ jobs:
         shell: msys2 {0}
         id: build
         run: |
-          cd "/${{ matrix.drive }}/_"
+          cd "$(cygpath '${{ steps.facts.outputs.drive }}/_')"
           unset VCPKG_ROOT
           MINGW_ARCH=${{ matrix.msystem }} ./.ci/ci-build.sh
 
@@ -100,7 +104,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.msystem }}-packages
-          path: ${{ matrix.drive }}:/_/artifacts/*.pkg.tar.*
+          path: ${{ steps.facts.outputs.drive }}/_/artifacts/*.pkg.tar.*
           if-no-files-found: ignore
 
       - name: "Upload dumps"
@@ -115,7 +119,7 @@ jobs:
         if: ${{ always() }}
         continue-on-error: true
         run: |
-          If (Test-Path "${{ matrix.drive }}:\_") { rm -r -fo "${{ matrix.drive }}:\_" }
+          If (Test-Path "${{ steps.facts.outputs.drive }}\_") { rm -r -fo "${{ steps.facts.outputs.drive }}\_" }
           msys2 -c 'mv -f /etc/pacman.conf.bak /etc/pacman.conf'
           msys2 -c 'pacman --noconfirm -Suuy'
           msys2 -c 'pacman --noconfirm -Suu'
