use cargo-edit to upgrade git2 for some packages

--- a/mingw-w64-jj/PKGBUILD
+++ b/mingw-w64-jj/PKGBUILD
@@ -5,7 +5,7 @@ pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-docs")
 pkgver=0.27.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Jujutsu (an experimental VCS) (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -20,13 +20,12 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
              "${MINGW_PACKAGE_PREFIX}-pkgconf"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-openssl"
+             "${MINGW_PACKAGE_PREFIX}-cargo-edit"
              'git')
 depends=("${MINGW_PACKAGE_PREFIX}-libgit2"
          "${MINGW_PACKAGE_PREFIX}-libssh2")
-source=("git+${url}.git#tag=v${pkgver}"
-        "https://github.com/jj-vcs/jj/pull/5315.patch")
-sha256sums=('c12c23460ad8cf2fe089646001e8adecc3c4ff2f50d742211f11d66dca613821'
-            '20d335c3fd3de1ffbfc41c89fcfcfba55755a7b546dfe91eeb92cabf14d75f8e')
+source=("git+${url}.git#tag=v${pkgver}")
+sha256sums=('c12c23460ad8cf2fe089646001e8adecc3c4ff2f50d742211f11d66dca613821')
 
 _env() {
   export OPENSSL_NO_VENDOR=1
@@ -38,7 +37,7 @@ prepare() {
   cd "${_realname}"
 
   # https://github.com/jj-vcs/jj/pull/5315
-  patch -Np1 -i ../5315.patch
+  cargo upgrade -p git2@0.20.0
 
   cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
 }
