grpc: update to 1.71.0
Fixes #23566

--- a/mingw-w64-grpc/PKGBUILD
+++ b/mingw-w64-grpc/PKGBUILD
@@ -4,8 +4,9 @@
 _realname=grpc
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
-         "${MINGW_PACKAGE_PREFIX}-python-grpcio")
-pkgver=1.69.0
+         "${MINGW_PACKAGE_PREFIX}-python-grpcio"
+         "${MINGW_PACKAGE_PREFIX}-python-grpcio-tools")
+pkgver=1.71.0
 pkgrel=1
 _opencensus_proto_ver=0.4.1
 pkgdesc="Google's high performance, open source, general RPC framework (mingw-w64)"
@@ -39,7 +40,7 @@ source=("https://github.com/grpc/grpc/archive/v${pkgver}/${_realname}-${pkgver}.
         "001-fix-building-shared-libraries-with-clang.patch"
         "002-fix-building-python-module.patch"
         "003-fix-build-shared-libs-on-mingw.patch")
-sha256sums=('cd256d91781911d46a57506978b3979bfee45d5086a1b6668a3ae19c5e77f8dc'
+sha256sums=('0d631419e54ec5b29def798623ee3bf5520dac77abeab3284ef7027ec2363f91'
             'e3d89f7f9ed84c9b6eee818c2e9306950519402bf803698b15c310b77ca2f0f3'
             'cf4064ad294bbddf15ac0611a4920dfa133a54ccaebbf813ed4faef6b20d142b'
             'c08e9a6a4dd569155452660825c8b42a06bbc6eb1e924af98796b138e6698e93'
@@ -121,7 +122,8 @@ build() {
   cp -r "${srcdir}/${_realname}-${pkgver}" "${srcdir}"/python-build-${MSYSTEM}
   cd "${srcdir}"/python-build-${MSYSTEM}
 
-  GRPC_PYTHON_BUILD_WITH_CYTHON=1 \
+  export GRPC_PYTHON_BUILD_WITH_CYTHON=1
+
   GRPC_PYTHON_BUILD_SYSTEM_OPENSSL=1 \
   GRPC_PYTHON_BUILD_SYSTEM_ZLIB=1 \
   GRPC_PYTHON_BUILD_SYSTEM_CARES=1 \
@@ -129,7 +131,23 @@ build() {
   GRPC_PYTHON_BUILD_SYSTEM_ABSL=1 \
   GRPC_BUILD_WITH_BORING_SSL_ASM=0 \
   GRPC_PYTHON_CFLAGS="-DGPR_MSVC_EMPTY_BASE_CLASS_WORKAROUND='' -DSTRSAFE_NO_DEPRECATE" \
-  LDFLAGS="$LDFLAGS -L../build-${MSYSTEM}" \
+  LDFLAGS="${LDFLAGS} -L../build-${MSYSTEM}" \
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
+
+  cd tools/distrib/python/grpcio_tools
+
+  # use system protobuf for grpcio_tools
+  WIN_PREFIX=$(cygpath -m ${MINGW_PREFIX})
+  sed -r -i \
+      -e '/^CC_FILES=\[/,/\]/{/^CC_FILES=\[/n;/\]/!d;}' \
+      -e '/^CC_INCLUDES=\[/,/\]/{/^CC_INCLUDES=\[/n;/\]/!d;}' \
+      -e "s@^(PROTO_INCLUDE=')[^']+'@\1${WIN_PREFIX}/include'@" \
+      -e '/^PROTOBUF_SUBMODULE_VERSION=/d' \
+      protoc_lib_deps.py
+  cp -r "${srcdir}"/${_realname}-${pkgver} grpc_root
+
+  GRPC_PYTHON_CFLAGS="${CFLAGS} -fno-wrapv -frtti -std=c++17 -DPROTOBUF_USE_DLLS" \
+  GRPC_PYTHON_LDFLAGS="${LDFLAGS} $(pkgconf --libs protobuf) -lprotoc" \
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
@@ -147,12 +165,15 @@ package_grpc() {
 
   DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake.exe --install .
 
-  install -Dm644 "${srcdir}/${_realname}-${pkgver}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
+  install -Dm644 "${srcdir}"/${_realname}-${pkgver}/LICENSE \
+    "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE
 }
 
 package_python-grpcio() {
   pkgdesc='Python language bindings for grpc, remote procedure call (RPC) framework (mingw-w64)'
   depends+=("${MINGW_PACKAGE_PREFIX}-python")
+  optdepends=("${MINGW_PACKAGE_PREFIX}-python-grpcio-tools")
+  options=(!strip)
 
   cd "${srcdir}"/python-build-${MSYSTEM}
 
@@ -160,7 +181,26 @@ package_python-grpcio() {
     ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
     --destdir="${pkgdir}" dist/*.whl
 
-  install -Dm644 "${srcdir}/${_realname}-${pkgver}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/python-grpcio/LICENSE"
+  install -Dm644 "${srcdir}"/${_realname}-${pkgver}/LICENSE \
+    "${pkgdir}"${MINGW_PREFIX}/share/licenses/python-grpcio/LICENSE
+}
+
+package_python-grpcio-tools() {
+  pkgdesc='Python protobuf generator for GRPC (mingw-w64)'
+  depends+=("${MINGW_PACKAGE_PREFIX}-python"
+            "${MINGW_PACKAGE_PREFIX}-python-grpcio"
+            "${MINGW_PACKAGE_PREFIX}-python-protobuf"
+            "${MINGW_PACKAGE_PREFIX}-python-setuptools")
+  options=(!strip)
+
+  cd "${srcdir}"/python-build-${MSYSTEM}/tools/distrib/python/grpcio_tools
+
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
+
+  install -Dm644 "${srcdir}"/${_realname}-${pkgver}/LICENSE \
+    "${pkgdir}"${MINGW_PREFIX}/share/licenses/python-grpcio-tools/LICENSE
 }
 
 # template start; name=mingw-w64-splitpkg-wrappers; version=1.0;
