python-websockets: update to 15.0.1

--- a/mingw-w64-python-websockets/PKGBUILD
+++ b/mingw-w64-python-websockets/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=websockets
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=15.0
+pkgver=15.0.1
 pkgrel=1
 pkgdesc='Library for building WebSocket servers and clients in Python (mingw-w64)'
 arch=('any')
@@ -20,8 +20,9 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-cc")
+options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('ca36151289a15b39d8d683fd8b7abbe26fc50be311066c5f8dcf3cb8cee107ab')
+sha256sums=('82544de02076bafba038ce055ee6412d68da13ab47f0c60cab827346de828dee')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
