uutils-coreutils: update to 0.0.30 set PROG_PREFIX because this package shouldn't conflict with cygwin coreutils

--- a/mingw-w64-uutils-coreutils/PKGBUILD
+++ b/mingw-w64-uutils-coreutils/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=coreutils
 pkgbase=mingw-w64-uutils-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-uutils-${_realname}")
-pkgver=0.0.29
+pkgver=0.0.30
 pkgrel=1
 pkgdesc="Cross-platform Rust rewrite of the GNU coreutils (mingw-w64)"
 arch=('any')
@@ -17,7 +17,7 @@ license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-oniguruma")
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust" "${MINGW_PACKAGE_PREFIX}-pkgconf")
 source=("https://github.com/uutils/coreutils/archive/${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('e1904ed6e5b8b441bedcba5afa7e8e8c744ef701f6d392de8c8dcc2ea17a34e2')
+sha256sums=('732c0ac646be7cc59a51cdfdb2d0ff1a4d2501c28f900a2d447c77729fdfca22')
 
 prepare() {
   cd "${_realname}-${pkgver}"
@@ -36,7 +36,11 @@ package() {
   cd "${_realname}-${pkgver}"
 
   export RUSTONIG_DYNAMIC_LIBONIG=1
-  make install DESTDIR="${pkgdir}" PREFIX="${MINGW_PREFIX}"
+  make install \
+    DESTDIR="${pkgdir}" \
+    PREFIX="${MINGW_PREFIX}" \
+    PROG_PREFIX=uu- \
+    PROFILE=release
 
   install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/uutils-${_realname}/LICENSE"
 }
