mdbook: update to 0.4.47

--- a/mingw-w64-mdbook/PKGBUILD
+++ b/mingw-w64-mdbook/PKGBUILD
@@ -4,12 +4,13 @@ _realName=mdBook
 _realname=${_realName,,}
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.4.46
+pkgver=0.4.47
 pkgrel=1
 pkgdesc="Create book from markdown files, like Gitbook but implemented in Rust (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url="https://github.com/rust-lang/mdBook"
+url="https://rust-lang.github.io/mdBook/"
+msys2_repository_url="https://github.com/rust-lang/mdBook"
 msys2_references=(
   'archlinux: mdbook'
   "cpe: cpe:/a:rust-lang:mdbook"
@@ -18,8 +19,8 @@ msys2_references=(
 license=('spdx:MPL-2.0')
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust")
 optdepends=("${MINGW_PACKAGE_PREFIX}-mdbook-pikchr: To render pikchr code blocks as image")
-source=("$url/archive/v$pkgver/$_realName-$pkgver.tar.gz")
-sha256sums=('607df9f18cbd5fcec2a3642d8ebf1376b2884e9263c007155d5d3e48d6641cea')
+source=("$msys2_repository_url/archive/v$pkgver/$_realName-$pkgver.tar.gz")
+sha256sums=('846a59ca86bcd014322267995ba307cd6a197081f4b75d085596d723dd8a633e')
 
 prepare() {
   cd "${srcdir}/${_realName}-${pkgver}"
