tinyxml2: update to 10.1.0

--- a/mingw-w64-tinyxml2/PKGBUILD
+++ b/mingw-w64-tinyxml2/PKGBUILD
@@ -3,12 +3,12 @@
 _realname=tinyxml2
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=10.0.0
+pkgver=10.1.0
 pkgrel=1
 pkgdesc="Simple, small, C++ XML parser that can be easily integrated into other programs (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url="http://www.grinninglizard.com/tinyxml2/index.html"
+url='https://github.com/leethomason/tinyxml2'
 msys2_references=(
   "cpe: cpe:/a:tinyxml_project:tinyxml"
 )
@@ -18,7 +18,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-ninja")
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
 source=(${_realname}-${pkgver}.tar.gz::https://github.com/leethomason/tinyxml2/archive/${pkgver}.tar.gz)
-sha256sums=('3bdf15128ba16686e69bce256cc468e76c7b94ff2c7f391cc5ec09e40bff3839')
+sha256sums=('9da7e1aebbf180ef6f39044b9740a4e96fa69e54a01318488512ae92ca97a685')
 
 build() {
   declare -a extra_config
